# smal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: pyproject.toml
src/examples/: example.smal  example_inlined.smal  example_substates.smal
src/examples/complex/: complex.smal
src/examples/simple/: simple.smal
src/examples/simple_shorthand/: simple_shorthand.smal
src/examples/substates/: substates.smal
src/smal/cli/: __init__.py  app.py
src/smal/cli/commands/: __init__.py  clean.py  code.py  corrections.py  debug.py  diagram.py  graphviz.py  helpers.py  rules.py  validate.py
src/smal/codegen/: __init__.py  code_generator.py  smal_templates.py  target_primitive.py
src/smal/codegen/c/: primitives.py
src/smal/codegen/templates/: __init__.py  builtin_templates.py  c-machine-hdr.j2  c_machine_hdr.j2
src/smal/codegen/templates/c/: c_dbg_boilerplate_hdr.j2  c_dbg_boilerplate_src.j2  c_machine_hdr.j2
src/smal/codegen/templates/macros/: __init__.py  builtin_macros.py  c_autogen_banner.j2  c_autogen_banner_state_machine.j2  c_machine_constants.j2  c_machine_errors.j2  c_machine_events.j2  c_machine_state_table_entry.j2  c_machine_state_transition_table.j2  c_machine_states.j2  c_machine_struct.j2  c_machine_version.j2
src/smal/codegen/templates/macros/c/: c_autogen_banner.j2  (+6 more)
src/smal/diagramming/: generation.py
src/smal/schemas/: __init__.py  bit_field.py  command.py  debug.py  enumeration.py  error.py  event.py  smal_bitfield.py  smal_file.py  smal_state.py  smal_struct.py  state.py  state_machine.py  struct.py  transition.py  utilities.py
src/smal/tests/: test_smal_file.py
src/smal/utilities/: corrections.py  persistence.py  rules.py  smal_primitive.py
(+14 files in other folders)
