[project]
name = "smal"
version = "0.1.0"
description = "State Machine Abstraction Language (SMAL) is a YAML-based description language for simple, robust and debuggable state machines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "semver>=3.0.4",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["smal"]

[project.scripts]
smal = "smal.cli.cli:app"
